--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,7 @@
     integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA712mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/estilo2.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
 
@@ -36,6 +36,32 @@
       </div>
   </nav>
   
+<div>
+    <ul class="nav nav-pills nav-justified">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="informacion.html">Información</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Documentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Proyectos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Eventos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="galeria.html">Galeria</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Acceder</a>
+        </li>
+    </ul>
+  </div>
+
     <div class="slider">
       <ul>
         <li><img src="images/2e.jpg" alt=""></li>
