--- a/galeria.html
+++ b/galeria.html
@@ -1,84 +1,35 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<title>SIENSI UFPS-GALERIA</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minimun-scale=1">
+<style type="text/css">
+  img{
+    border: 2px double;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 10px 10px 10px #05162A;
+  }
+</style>
 
-  <link rel="stylesheet" type="text/css" href=" https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin ="anonymous">
-    
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css/bootstrap-theme.min.css"
-    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA712mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-</head>
-<body>
-
-  <nav class="navbar navbar-light bg-light">
-    <div class="row">
-      <div class="col-12 col-md-3">
-          <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" class="d-inline-block align-top" alt="">
-          </a>
-        </div>
-        <div class="col-12 col-md-6">
-          <CENTER><h1>SIENSI</h1></CENTER>
-          <br>
-          <CENTER><h4>SEMILLERO DE INVESTIGACIÓN EN SEGURIDAD DE LA INFORMACIÓN</h4></CENTER>
-        </div>
-        <div class="col-12 col-md-3">
-          <a class="navbar-brand" href="https://ww2.ufps.edu.co/">
-          <img src="https://ww2.ufps.edu.co/public/archivos/elementos_corporativos/logoufps.png" id= "solologoufps" class="d-inline-block align-top" alt="">
-          </a>
-        </div>
+<article>
+  <br>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="images/2e.jpg" alt="First slide">
       </div>
-  </nav>
-  
-<div>
-    <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="informacion.html">Información</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Documentos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Proyectos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Eventos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="galeria.html">Galeria</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Acceder</a>
-        </li>
-    </ul>
-  </div>
-
-    <div class="slider">
-      <ul>
-        <li><img src="images/2e.jpg" alt=""></li>
-        <li><img src="images/1i.jpg" alt=""></li>
-        <li><img src="images/2i.jpg" alt=""></li>
-        <li><img src="images/1s.jpg" alt=""></li>
-      </ul>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/1i.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/2i.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="images/1s.jpg" alt="Third slide">
+      </div>
     </div>
-
-<footer class="footer">
-  <div class="container">
-    <center><p>|  Avenida Gran Colombia No. 12E-96B Colsag. San José de Cúcuta - Colombia. Teléfono +057 7 5776655 Ext. 277  |
-    <br> 
-|     Copyright © Todos los derechos reservados  | 
-    <br>
-    Contacto: siensi@ufps.edu.co</p></center>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-</footer>
-</body>
-</html>
+</article>
