--- a/index.html
+++ b/index.html
@@ -3,91 +3,82 @@
 <head>
 	<meta charset="utf-8">
 	<title>SIENSI UFPS</title>
-		<link rel="stylesheet" type="text/css" href="	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin ="anonymous">
-		
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css/bootstrap-theme.min.css"
-		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA712mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
-		<link rel="icon" type="image/jpeg" href="images/logosiensi.jpeg">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+		
+    	<script src="js/jquery.min.js"></script>
+    	<script src="js/bootstrap.bundle.min.js"></script>
+
+    	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+		
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
+		<script type="text/javascript" src="js/main.js"></script>
+
+		<link rel="icon" type="image/jpeg" href="images/logo.png">
 </head>
 <body>
-	
-	<nav class="navbar navbar-light bg-light">
+
+	<header>
 		<div class="row">
-			<div class="col-12 col-md-3">
-  				<a class="navbar-brand" href="index.html">
-    			<img src="images/logo.png" class="d-inline-block align-top" alt="">
-  				</a>
-  			</div>
-  			<div class="col-12 col-md-6">
-  				<CENTER><h1>SIENSI</h1></CENTER>
-  				<br>
-  				<CENTER><h4>SEMILLERO DE INVESTIGACIÓN EN SEGURIDAD DE LA INFORMACIÓN</h4></CENTER>
-  			</div>
-  			<div class="col-12 col-md-3">
-  				<a class="navbar-brand" href="https://ww2.ufps.edu.co/">
-    			<img src="https://ww2.ufps.edu.co/public/archivos/elementos_corporativos/logoufps.png" id= "solologoufps" class="d-inline-block align-top" alt="">
-  				</a>
-  			</div>
-  		</div>
+			<div class="izq">
+				<img src="images/logo.png">
+			</div>
+			<div class="centro">
+				<h1>SIENSI</h1>
+				<hr style="width: 100%;">
+				<h3>SEMILLERO DE INVESTIGACIÓN EN SEGURIDAD DE LA INFORMACIÓN</h3>
+			</div>
+			<div class="der">
+				<img src="images/logoufps.png">
+			</div>
+		</div>
+	</header>
+	<br>
+
+	<nav class="navbar navbar-expand-lg">
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="ion-navicon-round"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav">
+	      <li class="nav-item">
+	        <a class="nav-link" href="inicio">Inicio</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="informacion">Información</a>
+	      </li>
+	      <li class="nav-item">
+    			<a class="nav-link" href="documentos">Documentos</a>
+  			</li>
+  			<li class="nav-item">
+    			<a class="nav-link" href="proyectos">Proyectos</a>
+  			</li>
+  			<li class="nav-item">
+    			<a class="nav-link" href="eventos">Eventos</a>
+  			</li>
+  			<li class="nav-item">
+    			<a class="nav-link" href="galeria">Galeria</a>
+  			</li>
+  			<li class="nav-item">
+    			<a class="nav-link" href="acceder">Acceder</a>
+  			</li>
+	    </ul>
+	  </div>
 	</nav>
 
-	<div>
-		<ul class="nav nav-pills nav-justified">
-  			<li class="nav-item">
-    			<a class="nav-link active" href="index.html">Inicio</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="informacion.html">Información</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Documentos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Proyectos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Eventos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="galeria.html">Galeria</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link disabled" href="#">Acceder</a>
-  			</li>
-		</ul>
+	<div class="container" id="contenedora">
+		<!--CONTENIDO DE LA PAGINA-->
 	</div>
 
-	<div class="container">
-		<center><img src="images/nss.png" href="#"></center>
-		<h2>¿ QUE ES SIENSI ?</h2>
-		<p>SIENSI (Semillero de Investigación en Seguridad de la Información) ... Es un semillero enfocado en ... </p>
-		<h2>MISIÓN</h2>
-		<p>Es un semillero de investigación enfocado en la aplicación y estudio de tecnologías en seguridad de la información, teniendo como misión incentivar la investigación y desarrollo de herramientas prácticas que impulsen el desarrollo de la universidad, manejando protocolos y estándares actuales, avalados por entes internacionales.</p>
-		<h2>VISIÓN</h2>
-		<p>El SIENSI será para el ... el semillero de investigación líder del departamento de sistemas e informática en el desarrollo de proyectos de investigación, que estén a la vanguardia de las nuevas tecnologías, posicionándose dentro de la comunidad Universitaria y estableciendo las bases para la formación del grupo de investigación en seguridad de la información</p>
-		<h2>OBJETIVO GENERAL</h2>
-		<p>Promover el aprendizaje, la investigación e innovación en la seguridad de la información.</p>
-		<h2>LINEAS DE INVESTIGACIÓN</h2>
-		<ul>
-			<li>Legislación, Normatividad y Estándares en Seguridad de la Información</li>
-			<li>Seguridad en Redes de Computadores y Sistemas de Información</li>
-		</ul>
-	</div>
-
-<footer class="footer">
-	<div class="container">
-		<center><p>|  Avenida Gran Colombia No. 12E-96B Colsag. San José de Cúcuta - Colombia. Teléfono +057 7 5776655 Ext. 277  |
-		<br> 
-|  		Copyright © Todos los derechos reservados  | 
-		<br>
-		Contacto: siensi@ufps.edu.co</p></center>
-	</div>
-</footer>
+	<br>
+	<footer>
+		<div class="container">
+			<center><p>|  Avenida Gran Colombia No. 12E-96B Colsag. San José de Cúcuta - Colombia. Teléfono +057 7 5776655 Ext. 277  |
+			<br> 
+	|  		Copyright © Todos los derechos reservados  | 
+			<br>
+			Contacto: siensi@ufps.edu.co</p></center>
+		</div>
+	</footer>
 </body>
 </html>
