--- a/informacion.html
+++ b/informacion.html
@@ -1,90 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>SIENSI UFPS</title>
-		<link rel="stylesheet" type="text/css" href="	https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin ="anonymous">
-		
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css/bootstrap-theme.min.css"
-		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA712mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
-
-		<link rel="icon" type="image/jpeg" href="images/logosiensi.jpeg">
-</head>
-<body>
-	
-	<nav class="navbar navbar-light bg-light">
-		<div class="row">
-			<div class="col-12 col-md-3">
-  				<a class="navbar-brand" href="index.html">
-    			<img src="images/logo.png" class="d-inline-block align-top" alt="">
-  				</a>
-  			</div>
-  			<div class="col-12 col-md-6">
-  				<CENTER><h1>SIENSI</h1></CENTER>
-  				<br>
-  				<CENTER><h4>SEMILLERO DE INVESTIGACIÓN EN SEGURIDAD DE LA INFORMACIÓN</h4></CENTER>
-  			</div>
-  			<div class="col-12 col-md-3">
-  				<a class="navbar-brand" href="https://ww2.ufps.edu.co/">
-    			<img src="https://ww2.ufps.edu.co/public/archivos/elementos_corporativos/logoufps.png" id= "solologoufps" class="d-inline-block align-top" alt="">
-  				</a>
-  			</div>
-  		</div>
-	</nav>
-
-	<div>
-		<ul class="nav nav-pills nav-justified">
-  			<li class="nav-item">
-    			<a class="nav-link active" href="index.html">Inicio</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Información</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Documentos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Proyectos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="#">Eventos</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link" href="galeria.html">Galeria</a>
-  			</li>
-  			<li class="nav-item">
-    			<a class="nav-link disabled" href="#">Acceder</a>
-  			</li>
-		</ul>
-	</div>
-
+<article>
+  <br>
   <center><h3>SEMILLERO DE INVESTIGACIÓN EN SEGURIDAD DE LA INFORMACIÓN</h3></center>
 
-<section>
-  <div>
-  <h5><b>ENCUENTROS:</b></h5>
-  <br>
-  <b>DIA:</b> Viernes
-  <br>
-  <b>HORA:</b> 3:00 PM
-  <br>
-  <b>LUGAR:</b> Bloque SC, Piso 4, Sala 402 (Laboratorio de Redes)
-  </div>
-</section>
-
-<footer class="footer">
-	<div class="container">
-		<center><p>|  Avenida Gran Colombia No. 12E-96B Colsag. San José de Cúcuta - Colombia. Teléfono +057 7 5776655 Ext. 277  |
-		<br> 
-|  		Copyright © Todos los derechos reservados  | 
-		<br>
-		Contacto: siensi@ufps.edu.co</p></center>
-	</div>
-</footer>
-</body>
-</html>
+  <section>
+    <div>
+    <h5><b>ENCUENTROS:</b></h5>
+    <br>
+    <b>DIA:</b> Viernes
+    <br>
+    <b>HORA:</b> 3:00 PM
+    <br>
+    <b>LUGAR:</b> Bloque SC, Piso 4, Sala 402 (Laboratorio de Redes)
+    </div>
+  </section>
+</article>
