--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     	<script src="js/jquery.min.js"></script>
     	<script src="js/bootstrap.bundle.min.js"></script>
 
-    	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 		<script type="text/javascript" src="js/main.js"></script>
